assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

body {
    background-color: green;
    font-family: 'Lato', sans-serif;
}

#game-area {
    height: 100vh;
}

#play-area {
    border: 1px solid black;
    height: 70vh;

}

.dealer-area, .computer-player, .human-player {
    border: 1px solid black;
    height: auto;
    width: 100vw;
}

#quick-bets li{
    display: inline-block;
    margin: auto 15px;
    cursor: pointer;
    text-decoration: none;
    border: 1px dashed gold;
    border-radius: 10px;
    font-weight: 800;
    background-color: gold;
}

#hidden-zero {
    color: gold;
}

.human-cards, .computer-cards {
    text-align: center;
    margin: 0;
    padding: 0;
    height: 100%;
}

.center {
    text-align: center;
}

.options-area {
    text-align: center;
}

#human-score, #computer-score {
    font-size: large;
}

.score-display {
    font-size: large;
    text-align: center;
}

.menu-buttons {
    margin-top: 50%;
    text-align: center;
}

.btn {
    margin: 10px;

}

img {
    display: block;
    max-height: 100%;
    width: 100%;
    padding: 2px;
    margin: auto;
}

#overlay {
    width: 100vw;
    height: 100vh;
    background-color: rgba(000, 000, 000, 0.3);
    z-index: 10000;
}

